--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Boolando</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+    <header>
 
+    </header>
+    <main>
+
+    </main>
 </body>
 
 </html>
