[UPD] Add image and text to layout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolando</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/utility.css">
 </head>
 
 <body>
@@ -13,6 +15,51 @@
 
     </header>
     <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/1.webp" alt="img1">
+                        <div class="text">
+                            <div class="brand">
+                                Levi's
+                            </div>
+                            <div class="item">
+                                RELAXED FIT UNISEX
+                            </div>
+                            <div class="price">
+                                14,99 &euro; <span class="sale">29,99 &euro;</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/2.webp" alt="img2">
+                    </div>
+                </div>
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/3.webp" alt="img3">
+                    </div>
+                </div>
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/4.webp" alt="img4">
+                    </div>
+                </div>
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/5.webp" alt="img5">
+                    </div>
+                </div>
+                <div class="col-33">
+                    <div class="content">
+                        <img src="./img/6.webp" alt="img6">
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
 </body>
