[UPD] modded text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                                 Levi's
                             </div>
                             <div class="item">
-                                RELAXED FIT UNISEX
+                                RELAXED FIT TEE UNISEX
                             </div>
                             <div class="price">
                                 14,99 &euro; <span class="sale">29,99 &euro;</span>
