[UPD] Add all image and text

--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
                                 RELAXED FIT TEE UNISEX
                             </div>
                             <div class="price">
-                                14,99 &euro; <span class="sale">29,99 &euro;</span>
+                                14,99 &euro; <span class="sale-txt">29,99 &euro;</span>
+                            </div>
+                            <div class="sale-label">
+                                -50%
+                            </div>
+                            <div class="sus-label">
+                                Sostenibilità
+                            </div>
+                            <div class="hearts-label">
+                                &hearts;
                             </div>
                         </div>
                     </div>
@@ -36,26 +45,96 @@
                 <div class="col-33">
                     <div class="content">
                         <img src="./img/2.webp" alt="img2">
+                        <div class="text">
+                            <div class="brand">
+                                Guess
+                            </div>
+                            <div class="item">
+                                ROSES TEE
+                            </div>
+                            <div class="price">
+                                20,99 &euro; <span class="sale-txt">29,99 &euro;</span>
+                            </div>
+                            <div class="sale-label">
+                                -30%
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-33">
                     <div class="content">
                         <img src="./img/3.webp" alt="img3">
+                        <div class="text">
+                            <div class="brand">
+                                Come Zucchero Filato
+                            </div>
+                            <div class="item">
+                                VOGLIA DI COLORI PASTELLO
+                            </div>
+                            <div class="price">
+                                129,99 &euro; <span class="sale-txt">184,99 &euro;</span>
+                            </div>
+                            <div class="sale-label">
+                                -30%
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-33">
                     <div class="content">
                         <img src="./img/4.webp" alt="img4">
+                        <div class="text">
+                            <div class="brand">
+                                Levi's
+                            </div>
+                            <div class="item">
+                                TEE UNISEX
+                            </div>
+                            <div class="price">
+                                14,99 &euro; <span class="sale-txt">29,99 &euro;</span>
+                            </div>
+                            <div class="sale-label">
+                                -50%
+                            </div>
+                            <div class="sus-label">
+                                Sostenibilità
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-33">
                     <div class="content">
                         <img src="./img/5.webp" alt="img5">
+                        <div class="text">
+                            <div class="brand">
+                                Maya Deluxe
+                            </div>
+                            <div class="item">
+                                STRIPE BODICE
+                            </div>
+                            <div class="price">
+                                99,99 &euro;
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-33">
                     <div class="content">
                         <img src="./img/6.webp" alt="img6">
+                        <div class="text">
+                            <div class="brand">
+                                Esprit
+                            </div>
+                            <div class="item">
+                                MAGLIONE - BLACK
+                            </div>
+                            <div class="price">
+                                14,99 &euro; <span class="sale-txt">29,99 &euro;</span>
+                            </div>
+                            <div class="sus-label">
+                                Sostenibilità
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
