--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                             <div class="sale-label">
                                 -30%
                             </div>
+                            <div class="hearts-label">
+                                &hearts;
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -76,6 +79,9 @@
                             </div>
                             <div class="sale-label">
                                 -30%
+                            </div>
+                            <div class="hearts-label">
+                                &hearts;
                             </div>
                         </div>
                     </div>
@@ -99,6 +105,9 @@
                             <div class="sus-label">
                                 Sostenibilità
                             </div>
+                            <div class="hearts-label">
+                                &hearts;
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -114,6 +123,9 @@
                             </div>
                             <div class="price">
                                 99,99 &euro;
+                            </div>
+                            <div class="hearts-label">
+                                &hearts;
                             </div>
                         </div>
                     </div>
@@ -133,6 +145,9 @@
                             </div>
                             <div class="sus-label">
                                 Sostenibilità
+                            </div>
+                            <div class="hearts-label">
+                                &hearts;
                             </div>
                         </div>
                     </div>
