--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <div class="row">
                 <div class="col-33">
                     <div class="content">
-                        <img src="./img/1.webp" alt="img1">
+                        <img class="main-pic" src="./img/1.webp" alt="img1">
+                        <img class="hover-pic" src="./img/1b.webp" alt="img1">
                         <div class="text">
                             <div class="brand">
                                 Levi's
@@ -30,10 +31,10 @@
                             <div class="price">
                                 14,99 &euro; <span class="sale-txt">29,99 &euro;</span>
                             </div>
-                            <div class="sale-label">
+                            <div class="sale-label top-490">
                                 -50%
                             </div>
-                            <div class="sus-label">
+                            <div class="sus-label right-210 top-490">
                                 Sostenibilità
                             </div>
                             <div class="hearts-label">
@@ -44,7 +45,8 @@
                 </div>
                 <div class="col-33">
                     <div class="content">
-                        <img src="./img/2.webp" alt="img2">
+                        <img class="main-pic" src="./img/2.webp" alt="img2">
+                        <img class="hover-pic" src="./img/2b.webp" alt="img2">
                         <div class="text">
                             <div class="brand">
                                 Guess
@@ -55,7 +57,7 @@
                             <div class="price">
                                 20,99 &euro; <span class="sale-txt">29,99 &euro;</span>
                             </div>
-                            <div class="sale-label">
+                            <div class="sale-label top-490">
                                 -30%
                             </div>
                             <div class="hearts-label">
@@ -66,7 +68,8 @@
                 </div>
                 <div class="col-33">
                     <div class="content">
-                        <img src="./img/3.webp" alt="img3">
+                        <img class="main-pic" src="./img/3.webp" alt="img3">
+                        <img class="hover-pic" src="./img/3b.webp" alt="img3">
                         <div class="text">
                             <div class="brand">
                                 Come Zucchero Filato
@@ -77,7 +80,7 @@
                             <div class="price">
                                 129,99 &euro; <span class="sale-txt">184,99 &euro;</span>
                             </div>
-                            <div class="sale-label">
+                            <div class="sale-label top-490">
                                 -30%
                             </div>
                             <div class="hearts-label">
@@ -88,7 +91,8 @@
                 </div>
                 <div class="col-33">
                     <div class="content">
-                        <img src="./img/4.webp" alt="img4">
+                        <img class="main-pic" src="./img/4.webp" alt="img4">
+                        <img class="hover-pic" src="./img/4b.webp" alt="img4">
                         <div class="text">
                             <div class="brand">
                                 Levi's
@@ -99,10 +103,10 @@
                             <div class="price">
                                 14,99 &euro; <span class="sale-txt">29,99 &euro;</span>
                             </div>
-                            <div class="sale-label">
+                            <div class="sale-label top-490">
                                 -50%
                             </div>
-                            <div class="sus-label">
+                            <div class="sus-label right-210 top-490">
                                 Sostenibilità
                             </div>
                             <div class="hearts-label">
@@ -113,7 +117,8 @@
                 </div>
                 <div class="col-33">
                     <div class="content">
-                        <img src="./img/5.webp" alt="img5">
+                        <img class="main-pic" src="./img/5.webp" alt="img5">
+                        <img class="hover-pic" src="./img/5b.webp" alt="img5">
                         <div class="text">
                             <div class="brand">
                                 Maya Deluxe
@@ -132,7 +137,8 @@
                 </div>
                 <div class="col-33">
                     <div class="content">
-                        <img src="./img/6.webp" alt="img6">
+                        <img class="main-pic" src="./img/6.webp" alt="img6">
+                        <img class="hover-pic" src="./img/6b.webp" alt="img6">
                         <div class="text">
                             <div class="brand">
                                 Esprit
@@ -143,7 +149,7 @@
                             <div class="price">
                                 14,99 &euro; <span class="sale-txt">29,99 &euro;</span>
                             </div>
-                            <div class="sus-label">
+                            <div class="sus-label left-0 top-490">
                                 Sostenibilità
                             </div>
                             <div class="hearts-label">
