[FIX] Fixed labels

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
             <div class="row">
                 <div class="col-33">
                     <div class="content">
+                        <!-- IMAGES -->
                         <img class="main-pic" src="./img/1.webp" alt="img1">
-                        <img class="hover-pic" src="./img/1b.webp" alt="img1">
+                        <img class="hover-pic" src="./img/1b.webp" alt="img1b">
+                        <!-- TEXT -->
                         <div class="text">
                             <div class="brand">
                                 Levi's
@@ -31,11 +33,14 @@
                             <div class="price">
                                 14,99 &euro; <span class="sale-txt">29,99 &euro;</span>
                             </div>
-                            <div class="sale-label top-490">
-                                -50%
-                            </div>
-                            <div class="sus-label right-210 top-490">
-                                Sostenibilità
+                            <!-- LABELS -->
+                            <div class="labels top-490">
+                                <span class="sale-label">
+                                    -50%
+                                </span>
+                                <span class="sus-label">
+                                    Sostenibilità
+                                </span>
                             </div>
                             <div class="hearts-label">
                                 &hearts;
@@ -45,8 +50,10 @@
                 </div>
                 <div class="col-33">
                     <div class="content">
+                        <!-- IMAGES -->
                         <img class="main-pic" src="./img/2.webp" alt="img2">
-                        <img class="hover-pic" src="./img/2b.webp" alt="img2">
+                        <img class="hover-pic" src="./img/2b.webp" alt="img2b">
+                        <!-- TEXT -->
                         <div class="text">
                             <div class="brand">
                                 Guess
@@ -57,8 +64,11 @@
                             <div class="price">
                                 20,99 &euro; <span class="sale-txt">29,99 &euro;</span>
                             </div>
-                            <div class="sale-label top-490">
-                                -30%
+                            <!-- LABELS -->
+                            <div class="labels top-490">
+                                <span class="sale-label">
+                                    -30%
+                                </span>
                             </div>
                             <div class="hearts-label">
                                 &hearts;
@@ -68,8 +78,10 @@
                 </div>
                 <div class="col-33">
                     <div class="content">
+                        <!-- IMAGES -->
                         <img class="main-pic" src="./img/3.webp" alt="img3">
-                        <img class="hover-pic" src="./img/3b.webp" alt="img3">
+                        <img class="hover-pic" src="./img/3b.webp" alt="img3b">
+                        <!-- TEXT -->
                         <div class="text">
                             <div class="brand">
                                 Come Zucchero Filato
@@ -80,8 +92,11 @@
                             <div class="price">
                                 129,99 &euro; <span class="sale-txt">184,99 &euro;</span>
                             </div>
-                            <div class="sale-label top-490">
-                                -30%
+                            <!-- LABELS -->
+                            <div class="labels top-490">
+                                <span class="sale-label">
+                                    -30%
+                                </span>
                             </div>
                             <div class="hearts-label">
                                 &hearts;
@@ -91,8 +106,10 @@
                 </div>
                 <div class="col-33">
                     <div class="content">
+                        <!-- IMAGES -->
                         <img class="main-pic" src="./img/4.webp" alt="img4">
-                        <img class="hover-pic" src="./img/4b.webp" alt="img4">
+                        <img class="hover-pic" src="./img/4b.webp" alt="img4b">
+                        <!-- TEXT -->
                         <div class="text">
                             <div class="brand">
                                 Levi's
@@ -103,11 +120,14 @@
                             <div class="price">
                                 14,99 &euro; <span class="sale-txt">29,99 &euro;</span>
                             </div>
-                            <div class="sale-label top-490">
-                                -50%
-                            </div>
-                            <div class="sus-label right-210 top-490">
-                                Sostenibilità
+                            <!-- LABELS -->
+                            <div class="labels top-490">
+                                <span class="sale-label">
+                                    -50%
+                                </span>
+                                <span class="sus-label">
+                                    Sostenibilità
+                                </span>
                             </div>
                             <div class="hearts-label">
                                 &hearts;
@@ -117,8 +137,10 @@
                 </div>
                 <div class="col-33">
                     <div class="content">
+                        <!-- IMAGES -->
                         <img class="main-pic" src="./img/5.webp" alt="img5">
-                        <img class="hover-pic" src="./img/5b.webp" alt="img5">
+                        <img class="hover-pic" src="./img/5b.webp" alt="img5b">
+                        <!-- TEXT -->
                         <div class="text">
                             <div class="brand">
                                 Maya Deluxe
@@ -129,6 +151,7 @@
                             <div class="price">
                                 99,99 &euro;
                             </div>
+                            <!-- LABELS -->
                             <div class="hearts-label">
                                 &hearts;
                             </div>
@@ -137,8 +160,10 @@
                 </div>
                 <div class="col-33">
                     <div class="content">
+                        <!-- IMAGES -->
                         <img class="main-pic" src="./img/6.webp" alt="img6">
                         <img class="hover-pic" src="./img/6b.webp" alt="img6">
+                        <!-- TEXT -->
                         <div class="text">
                             <div class="brand">
                                 Esprit
@@ -147,10 +172,13 @@
                                 MAGLIONE - BLACK
                             </div>
                             <div class="price">
-                                14,99 &euro; <span class="sale-txt">29,99 &euro;</span>
+                                29,99 &euro;
                             </div>
-                            <div class="sus-label left-0 top-490">
-                                Sostenibilità
+                            <!-- LABELS -->
+                            <div class="labels top-490">
+                                <span class="sus-label">
+                                    Sostenibilità
+                                </span>
                             </div>
                             <div class="hearts-label">
                                 &hearts;
