--- a/bonus/index.html
+++ b/bonus/index.html
@@ -12,7 +12,34 @@
 
 <body>
     <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-33">
+                    <div class="categories">
+                        <a href="">Donna</a>
+                        <a href="">Uomo</a>
+                        <a href="">Bambini</a>
+                    </div>
+                </div>
+                <div class="row col-33 center">
+                    <a class="" href="">
+                        <img class="logo" src="./img/boolean-logo.png" alt="logo">
+                    </a>
+                </div>
+                <div class="row col-33 icons">
+                    <a href="">
+                        <img class="icon" src="./img/user.png" alt="user">
+                    </a>
+                    <a href="">
+                        <img class="icon" src="./img/like.png" alt="like">
+                    </a>
+                    <a href="">
+                        <img class="icon" src="./img/shopping-bag.png" alt="shop">
+                    </a>
+                </div>
+            </div>
 
+        </div>
     </header>
     <main>
         <div class="container">
