[UPD] Add header css and hover hearth effect

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <div class="container">
+        <div class="head-container">
             <div class="row">
                 <div class="col-33">
                     <div class="categories">
@@ -21,23 +21,20 @@
                         <a href="">Bambini</a>
                     </div>
                 </div>
-                <div class="row col-33 center">
-                    <a class="" href="">
+                <div class="col-33 text-center">
+                    <a href="">
                         <img class="logo" src="./img/boolean-logo.png" alt="logo">
                     </a>
                 </div>
-                <div class="row col-33 icons">
-                    <a href="">
+                <div class="col-33">
+                    <div class="container-icon">
                         <img class="icon" src="./img/user.png" alt="user">
-                    </a>
-                    <a href="">
                         <img class="icon" src="./img/like.png" alt="like">
-                    </a>
-                    <a href="">
                         <img class="icon" src="./img/shopping-bag.png" alt="shop">
-                    </a>
+                    </div>
                 </div>
             </div>
+        </div>
 
         </div>
     </header>
@@ -215,7 +212,9 @@
                 </div>
             </div>
         </div>
+        <footer>
 
+        </footer>
     </main>
 </body>
 
