[UPD] Add footer

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <div class="head-container">
+        <div class="container">
             <div class="row">
                 <div class="col-33">
                     <div class="categories">
@@ -213,7 +213,23 @@
             </div>
         </div>
         <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-50">
+                        <div class="info">
+                            <h3>Boolando s.r.l.</h3>
+                            <a href="">Informazioni legali</a>
+                            <a href="">Informativa sulla privacy</a>
+                            <a href="">Diritto di recesso</a>
+                        </div>
+                    </div>
+                    <div class="col-50">
+                        <div class="social">
 
+                        </div>
+                    </div>
+                </div>
+            </div>
         </footer>
     </main>
 </body>
