--- a/bonus/index.html
+++ b/bonus/index.html
@@ -212,26 +212,34 @@
                 </div>
             </div>
         </div>
-        <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-50">
-                        <div class="info">
-                            <h3>Boolando s.r.l.</h3>
-                            <a href="">Informazioni legali</a>
-                            <a href="">Informativa sulla privacy</a>
-                            <a href="">Diritto di recesso</a>
-                        </div>
+    </main>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-50">
+                    <div class="info">
+                        <h3>Boolando s.r.l.</h3>
+                        <a href="">Informazioni legali</a>
+                        <a href="">Informativa sulla privacy</a>
+                        <a href="">Diritto di recesso</a>
                     </div>
-                    <div class="col-50">
-                        <div class="social">
-
+                </div>
+                <div class="col-50">
+                    <div class="social">
+                        <h4>Trovaci anche su</h4>
+                        <div class="social-logo">
+                            <img src="./img/twitter-square-icon.webp" alt="twitter">
+                            <img src="./img/facebook-square-icon.png" alt="facebook">
+                            <img src="./img/Black_Instagram_icon.svg.png" alt="instagram">
+                            <img src="./img/pinterest-square-512.webp" alt="pinterest">
+                            <img src="./img/youtube-square.png" alt="youtube">
                         </div>
+
                     </div>
                 </div>
             </div>
-        </footer>
-    </main>
+        </div>
+    </footer>
 </body>
 
 </html>
